@@ -22,7 +22,7 @@
 	</p>
 
 	<p>
-	<strong>Release notes for htdig-3.1.5</strong>18 Feb 2000<br>
+	<strong>Release notes for htdig-3.1.5</strong>23 Feb 2000<br>
 	This version cleans up some remaining bugs in the 3.1.4
 	release. As the latest stable release of ht://Dig, it is
 	recommended for all production servers.
@@ -47,6 +47,8 @@
 	    than only the last.</li>
 	<li>Fixed htdig's handling of servers that return 2-digit years.</li>
 	<li>Fixed handling of embedded quotes in quoted string lists.</li>
+	<li>Fixed handling of relative URLs with trailing ".." or leading
+	    "//".</li>
 	<li>Fixed handling of the
 	    <a href="attrs.html#valid_extensions">valid_extensions</a>
 	    attribute, which sometimes failed in the previous version.</li>
@@ -1142,7 +1144,7 @@
 	  <a href="author.html">Andrew Scherpbier &lt;andrew@contigo.com&gt;</a>
 	</address>
 
-Last modified: $Date: 2000/02/17 22:05:21 $
+Last modified: $Date: 2000/02/22 18:46:22 $
 
   </body>
 </html>
