@@ -20,7 +20,7 @@
 	  Recent News
 	</h2>
 	<ul>
-	  <li><strong> 18 Feb 2000:</strong> A new stable release of
+	  <li><strong> 23 Feb 2000:</strong> A new stable release of
 	      ht://Dig, htdig-3.1.5, is released. This release is
 	      recommended for all production systems. It solves most
 	      of the outstanding bugs in the 3.1.x releases, including
@@ -112,7 +112,7 @@
 	  <a href="author.html">Andrew Scherpbier &lt;andrew@contigo.com&gt;</a>
 	</address>
 
-Last modified: $Date: 2000/02/17 22:05:22 $
+Last modified: $Date: 2000/02/22 18:46:22 $
 
   </body>
 </html>
