@@ -1,4 +1,6 @@
-Tue Feb 22 12:34:05 2000  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>
+Tue Feb 22 12:40:22 2000  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>
+
+	* htdoc/RELEASE.html, htdoc/main.html: Updated notes for 3.1.5 release.
 
 	* htlib/URL.cc (URL, normalizePath): Fix PR#779, to handle relative
 	URLs correctly when there's a trailing ".." or leading "//".
